fixes a number of bugs including mobile response and header alignment

--- a/styles/base.css
+++ b/styles/base.css
@@ -21,7 +21,7 @@ nav {
 }
 section {
   font-family: 'Roboto', sans-serif;
-  line-height: 1.2em;
+  line-height: 1.5;
   /*margin: 1em;*/
 }
 address {
