--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,7 @@
   height: 4.4em;
 }
 .landing-image {
-  max-width: 100%;
+  width: 100%;
 }
 .nav-header-container {
   position: fixed;
