--- a/styles/modules.css
+++ b/styles/modules.css
@@ -67,7 +67,6 @@
   margin-bottom: 0.8em;
   padding: 0.4em;
   font-size: 2em;
-  width: 100%;
   background: black;
   color: white;
   text-align: center;
@@ -109,7 +108,7 @@
   background: none;
 }
 
-@media only screen and (min-width: 640px) {
+@media (min-width: 640px) {
   .white-space {
     height: 5.6em;
   }
